tdf#136194 writerfilter: bigger band-aid for chapter numbering

I don't actually intend to submit this. I just keep throwing
bits together until I could pass all the unit tests.
It kinda shows that we don't handle inheritance properly,
and we have no clue what to do about outline numbering.

Change-Id: I54047b605c3eb9611e2cc49cacc44081a28dd92a